; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_tun.c_do_ifconfig_ipv6.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_tun.c_do_ifconfig_ipv6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tuntap = type { i8*, i64, %struct.TYPE_2__, i32, i32, i32 }
%struct.TYPE_2__ = type { i64, i32, i32, i64 }
%struct.env_set = type { i32 }
%struct.argv = type { i32 }
%struct.gc_arena = type { i32 }

@M_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [158 x i8] c"Sorry, but I don't know how to do IPv6 'ifconfig' commands on this operating system.  You should ifconfig your TUN/TAP device manually or use an --up script.\00", align 1
@AF_INET6 = common dso_local global i32 0, align 4
@DEV_TYPE_TUN = common dso_local global i64 0, align 8
@IFCONFIG_PATH = common dso_local global i32 0, align 4
@IPW32_SET_MANUAL = common dso_local global i64 0, align 8
@M_INFO = common dso_local global i32 0, align 4
@NETSH_PATH_SUFFIX = common dso_local global i8* null, align 8
@S_FATAL = common dso_local global i32 0, align 4
@management = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tuntap*, i8*, i32, %struct.env_set*, i32*)* @do_ifconfig_ipv6 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_ifconfig_ipv6(%struct.tuntap* %0, i8* %1, i32 %2, %struct.env_set* %3, i32* %4) #0 {
  %6 = alloca %struct.tuntap*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.env_set*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.argv, align 4
  %12 = alloca %struct.gc_arena, align 4
  %13 = alloca i8*, align 8
  store %struct.tuntap* %0, %struct.tuntap** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.env_set* %3, %struct.env_set** %9, align 8
  store i32* %4, i32** %10, align 8
  %14 = call i32 (...) @argv_new()
  %15 = getelementptr inbounds %struct.argv, %struct.argv* %11, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = call i32 (...) @gc_new()
  %17 = getelementptr inbounds %struct.gc_arena, %struct.gc_arena* %12, i32 0, i32 0
  store i32 %16, i32* %17, align 4
  %18 = load %struct.tuntap*, %struct.tuntap** %6, align 8
  %19 = getelementptr inbounds %struct.tuntap, %struct.tuntap* %18, i32 0, i32 5
  %20 = load i32, i32* %19, align 8
  %21 = call i8* @print_in6_addr(i32 %20, i32 0, %struct.gc_arena* %12)
  store i8* %21, i8** %13, align 8
  %22 = load i32, i32* @M_FATAL, align 4
  %23 = call i32 (i32, i8*, ...) @msg(i32 %22, i8* getelementptr inbounds ([158 x i8], [158 x i8]* @.str, i64 0, i64 0))
  %24 = call i32 @gc_free(%struct.gc_arena* %12)
  %25 = call i32 @argv_reset(%struct.argv* %11)
  ret void
}

declare dso_local i32 @argv_new(...) #1

declare dso_local i32 @gc_new(...) #1

declare dso_local i8* @print_in6_addr(i32, i32, %struct.gc_arena*) #1

declare dso_local i32 @msg(i32, i8*, ...) #1

declare dso_local i32 @gc_free(%struct.gc_arena*) #1

declare dso_local i32 @argv_reset(%struct.argv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
